Updated summary figure, 08-June-2018

--- a/summary.html
+++ b/summary.html
@@ -241,7 +241,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="Footnotes.html">Footnotes</a>
+  <a href="footnotes.html">Footnotes</a>
 </li>
 <li>
   <a href="https://github.com/eparker12/oral_vaccine_interventions_metaanalysis_2018">
