--- a/Buffer.html
+++ b/Buffer.html
@@ -345,7 +345,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="Footnotes.html">Footnotes</a>
+  <a href="footnotes.html">Footnotes</a>
 </li>
 <li>
   <a href="https://github.com/eparker12/oral_vaccine_interventions_metaanalysis_2018">
