--- a/RVV_separated_from_OPV.html
+++ b/RVV_separated_from_OPV.html
@@ -345,7 +345,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="Footnotes.html">Footnotes</a>
+  <a href="footnotes.html">Footnotes</a>
 </li>
 <li>
   <a href="https://github.com/eparker12/oral_vaccine_interventions_metaanalysis_2018">
@@ -389,7 +389,7 @@ div.tocify {
 ## model:     mixed-effects meta-regression model
 ## predictor: standard error
 ## 
-## test for funnel plot asymmetry: z = 2.9053, p = 0.0037
+## test for funnel plot asymmetry: z = 2.8177, p = 0.0048
 ## 
 ## [1] &quot;OPV3:&quot;
 ## 
@@ -398,7 +398,7 @@ div.tocify {
 ## model:     mixed-effects meta-regression model
 ## predictor: standard error
 ## 
-## test for funnel plot asymmetry: z = 0.9181, p = 0.3586</code></pre>
+## test for funnel plot asymmetry: z = 0.9962, p = 0.3192</code></pre>
 </div>
 <div id="meta-analysis-output" class="section level3">
 <h3>Meta-analysis output</h3>
@@ -406,20 +406,20 @@ div.tocify {
 ## Multivariate Meta-Analysis Model (k = 14; method: REML)
 ## 
 ##   logLik  Deviance       AIC       BIC      AICc  
-##  -3.4451    6.8902   10.8902   12.0201   12.0902  
+##  -3.3635    6.7271   10.7271   11.8570   11.9271  
 ## 
 ## Variance Components: 
 ## 
 ##             estim    sqrt  nlvls  fixed     factor
-## sigma^2    0.0000  0.0000      7     no  Reference
+## sigma^2    0.0000  0.0000      8     no  Reference
 ## 
 ## Test for Heterogeneity: 
-## Q(df = 13) = 32.7150, p-val = 0.0019
+## Q(df = 13) = 32.4549, p-val = 0.0021
 ## 
 ## Model Results:
 ## 
 ## estimate      se    zval    pval    ci.lb   ci.ub   
-##   0.0145  0.0078  1.8586  0.0631  -0.0008  0.0299  .
+##   0.0150  0.0077  1.9508  0.0511  -0.0001  0.0301  .
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -432,19 +432,19 @@ div.tocify {
 ## Variance Components: 
 ## 
 ##             estim    sqrt  nlvls  fixed     factor
-## sigma^2    0.0000  0.0000      7     no  Reference
+## sigma^2    0.0000  0.0000      8     no  Reference
 ## 
 ## Test for Residual Heterogeneity: 
-## QE(df = 12) = 24.5089, p-val = 0.0173
+## QE(df = 12) = 24.6151, p-val = 0.0168
 ## 
 ## Test of Moderators (coefficient(s) 2): 
-## QM(df = 1) = 8.2061, p-val = 0.0042
+## QM(df = 1) = 7.8398, p-val = 0.0051
 ## 
 ## Model Results:
 ## 
 ##                   estimate      se    zval    pval    ci.lb   ci.ub    
-## intrcpt             0.0019  0.0090  0.2087  0.8347  -0.0157  0.0195    
-## VaccineRotavirus    0.0523  0.0183  2.8646  0.0042   0.0165  0.0882  **
+## intrcpt             0.0031  0.0088  0.3548  0.7228  -0.0141  0.0204    
+## VaccineRotavirus    0.0509  0.0182  2.8000  0.0051   0.0153  0.0866  **
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -461,20 +461,20 @@ div.tocify {
 ## Random-Effects Model (k = 8; tau^2 estimator: REML)
 ## 
 ##   logLik  deviance       AIC       BIC      AICc  
-##  -4.5343    9.0685   13.0685   12.9603   16.0685  
+##  -4.6499    9.2999   13.2999   13.1917   16.2999  
 ## 
-## tau^2 (estimated amount of total heterogeneity): 0.0380 (SE = 0.0374)
-## tau (square root of estimated tau^2 value):      0.1950
-## I^2 (total heterogeneity / total variability):   65.93%
-## H^2 (total variability / sampling variability):  2.93
+## tau^2 (estimated amount of total heterogeneity): 0.0439 (SE = 0.0422)
+## tau (square root of estimated tau^2 value):      0.2095
+## I^2 (total heterogeneity / total variability):   67.80%
+## H^2 (total variability / sampling variability):  3.11
 ## 
 ## Test for Heterogeneity: 
-## Q(df = 7) = 19.6433, p-val = 0.0064
+## Q(df = 7) = 19.5966, p-val = 0.0065
 ## 
 ## Model Results:
 ## 
-## estimate      se    zval    pval   ci.lb   ci.ub   
-##   0.1909  0.0970  1.9684  0.0490  0.0008  0.3810  *
+## estimate      se    zval    pval    ci.lb   ci.ub   
+##   0.1987  0.1028  1.9332  0.0532  -0.0028  0.4001  .
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -485,20 +485,20 @@ div.tocify {
 ## Random-Effects Model (k = 6; tau^2 estimator: REML)
 ## 
 ##   logLik  deviance       AIC       BIC      AICc  
-##   3.3313   -6.6626   -2.6626   -3.4438    3.3374  
+##   3.3873   -6.7745   -2.7745   -3.5556    3.2255  
 ## 
-## tau^2 (estimated amount of total heterogeneity): 0.0000 (SE = 0.0005)
-## tau (square root of estimated tau^2 value):      0.0015
-## I^2 (total heterogeneity / total variability):   0.12%
+## tau^2 (estimated amount of total heterogeneity): 0.0000 (SE = 0.0004)
+## tau (square root of estimated tau^2 value):      0.0025
+## I^2 (total heterogeneity / total variability):   0.44%
 ## H^2 (total variability / sampling variability):  1.00
 ## 
 ## Test for Heterogeneity: 
-## Q(df = 5) = 4.8656, p-val = 0.4325
+## Q(df = 5) = 5.0185, p-val = 0.4136
 ## 
 ## Model Results:
 ## 
 ## estimate      se    zval    pval    ci.lb   ci.ub   
-##   0.0019  0.0091  0.2085  0.8348  -0.0159  0.0197   
+##   0.0032  0.0090  0.3562  0.7217  -0.0145  0.0209   
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -525,7 +525,7 @@ div.tocify {
 ## model:     mixed-effects meta-regression model
 ## predictor: standard error
 ## 
-## test for funnel plot asymmetry: z = 1.7901, p = 0.0734</code></pre>
+## test for funnel plot asymmetry: z = 1.8431, p = 0.0653</code></pre>
 <pre><code>## [1] &quot;OPV2:&quot;</code></pre>
 <pre><code>## 
 ## Regression Test for Funnel Plot Asymmetry
@@ -533,7 +533,7 @@ div.tocify {
 ## model:     mixed-effects meta-regression model
 ## predictor: standard error
 ## 
-## test for funnel plot asymmetry: z = -0.0970, p = 0.9227</code></pre>
+## test for funnel plot asymmetry: z = 0.0066, p = 0.9947</code></pre>
 <pre><code>## [1] &quot;OPV3:&quot;</code></pre>
 <pre><code>## 
 ## Regression Test for Funnel Plot Asymmetry
@@ -541,7 +541,7 @@ div.tocify {
 ## model:     mixed-effects meta-regression model
 ## predictor: standard error
 ## 
-## test for funnel plot asymmetry: z = 0.9181, p = 0.3586</code></pre>
+## test for funnel plot asymmetry: z = 0.9962, p = 0.3192</code></pre>
 </div>
 <div id="meta-analysis-output-1" class="section level3">
 <h3>Meta-analysis output</h3>
@@ -549,7 +549,7 @@ div.tocify {
 ## Multivariate Meta-Analysis Model (k = 17; method: REML)
 ## 
 ##   logLik  Deviance       AIC       BIC      AICc  
-##  26.2267  -52.4533  -48.4533  -46.9081  -47.5302  
+##  26.5267  -53.0533  -49.0533  -47.5082  -48.1303  
 ## 
 ## Variance Components: 
 ## 
@@ -557,12 +557,12 @@ div.tocify {
 ## sigma^2    0.0000  0.0000      7     no  Reference
 ## 
 ## Test for Heterogeneity: 
-## Q(df = 16) = 11.9142, p-val = 0.7499
+## Q(df = 16) = 12.2061, p-val = 0.7297
 ## 
 ## Model Results:
 ## 
 ## estimate      se    zval    pval    ci.lb   ci.ub   
-##   0.0017  0.0031  0.5392  0.5897  -0.0045  0.0078   
+##   0.0022  0.0031  0.6975  0.4855  -0.0039  0.0082   
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -578,17 +578,17 @@ div.tocify {
 ## sigma^2    0.0000  0.0000      7     no  Reference
 ## 
 ## Test for Residual Heterogeneity: 
-## QE(df = 14) = 10.9686, p-val = 0.6885
+## QE(df = 14) = 11.1835, p-val = 0.6716
 ## 
 ## Test of Moderators (coefficient(s) 2:3): 
-## QM(df = 2) = 0.9456, p-val = 0.6232
+## QM(df = 2) = 1.0226, p-val = 0.5997
 ## 
 ## Model Results:
 ## 
 ##                         estimate      se     zval    pval    ci.lb   ci.ub
-## intrcpt                   0.0069  0.0063   1.0885  0.2764  -0.0055  0.0194
-## Measure_of_SCOPV2 N-AB   -0.0073  0.0075  -0.9722  0.3310  -0.0219  0.0074
-## Measure_of_SCOPV3 N-AB   -0.0050  0.0110  -0.4574  0.6474  -0.0266  0.0165
+## intrcpt                   0.0073  0.0062   1.1760  0.2396  -0.0049  0.0194
+## Measure_of_SCOPV2 N-AB   -0.0074  0.0073  -1.0044  0.3152  -0.0217  0.0070
+## Measure_of_SCOPV3 N-AB   -0.0042  0.0108  -0.3875  0.6984  -0.0253  0.0169
 ##                          
 ## intrcpt                  
 ## Measure_of_SCOPV2 N-AB   
@@ -605,7 +605,7 @@ div.tocify {
 ## Random-Effects Model (k = 7; tau^2 estimator: REML)
 ## 
 ##   logLik  deviance       AIC       BIC      AICc  
-##   8.2203  -16.4405  -12.4405  -12.8570   -8.4405  
+##   8.3824  -16.7648  -12.7648  -13.1813   -8.7648  
 ## 
 ## tau^2 (estimated amount of total heterogeneity): 0 (SE = 0.0002)
 ## tau (square root of estimated tau^2 value):      0
@@ -613,12 +613,12 @@ div.tocify {
 ## H^2 (total variability / sampling variability):  1.00
 ## 
 ## Test for Heterogeneity: 
-## Q(df = 6) = 5.8625, p-val = 0.4388
+## Q(df = 6) = 5.7907, p-val = 0.4470
 ## 
 ## Model Results:
 ## 
 ## estimate      se    zval    pval    ci.lb   ci.ub   
-##   0.0069  0.0063  1.0885  0.2764  -0.0055  0.0194   
+##   0.0073  0.0062  1.1760  0.2396  -0.0049  0.0194   
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -629,20 +629,20 @@ div.tocify {
 ## Random-Effects Model (k = 4; tau^2 estimator: REML)
 ## 
 ##   logLik  deviance       AIC       BIC      AICc  
-##   8.5846  -17.1691  -13.1691  -14.9719   -1.1691  
+##   8.6586  -17.3172  -13.3172  -15.1200   -1.3172  
 ## 
-## tau^2 (estimated amount of total heterogeneity): 0 (SE = 0.0002)
+## tau^2 (estimated amount of total heterogeneity): 0 (SE = 0.0001)
 ## tau (square root of estimated tau^2 value):      0
 ## I^2 (total heterogeneity / total variability):   0.00%
 ## H^2 (total variability / sampling variability):  1.00
 ## 
 ## Test for Heterogeneity: 
-## Q(df = 3) = 0.2404, p-val = 0.9708
+## Q(df = 3) = 0.3743, p-val = 0.9455
 ## 
 ## Model Results:
 ## 
 ## estimate      se     zval    pval    ci.lb   ci.ub   
-##  -0.0004  0.0039  -0.0892  0.9289  -0.0081  0.0074   
+##  -0.0001  0.0039  -0.0170  0.9864  -0.0077  0.0076   
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -653,20 +653,20 @@ div.tocify {
 ## Random-Effects Model (k = 6; tau^2 estimator: REML)
 ## 
 ##   logLik  deviance       AIC       BIC      AICc  
-##   3.3313   -6.6626   -2.6626   -3.4438    3.3374  
+##   3.3873   -6.7745   -2.7745   -3.5556    3.2255  
 ## 
-## tau^2 (estimated amount of total heterogeneity): 0.0000 (SE = 0.0005)
-## tau (square root of estimated tau^2 value):      0.0015
-## I^2 (total heterogeneity / total variability):   0.12%
+## tau^2 (estimated amount of total heterogeneity): 0.0000 (SE = 0.0004)
+## tau (square root of estimated tau^2 value):      0.0025
+## I^2 (total heterogeneity / total variability):   0.44%
 ## H^2 (total variability / sampling variability):  1.00
 ## 
 ## Test for Heterogeneity: 
-## Q(df = 5) = 4.8656, p-val = 0.4325
+## Q(df = 5) = 5.0185, p-val = 0.4136
 ## 
 ## Model Results:
 ## 
 ## estimate      se    zval    pval    ci.lb   ci.ub   
-##   0.0019  0.0091  0.2085  0.8348  -0.0159  0.0197   
+##   0.0032  0.0090  0.3562  0.7217  -0.0145  0.0209   
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
