--- a/Increased_vaccine_inoculum.html
+++ b/Increased_vaccine_inoculum.html
@@ -386,7 +386,7 @@ div.tocify {
 ## model:     mixed-effects meta-regression model
 ## predictor: standard error
 ## 
-## test for funnel plot asymmetry: z = 2.8184, p = 0.0048</code></pre>
+## test for funnel plot asymmetry: z = 2.9993, p = 0.0027</code></pre>
 </div>
 <div id="meta-analysis-output" class="section level3">
 <h3>Meta-analysis output</h3>
@@ -394,20 +394,20 @@ div.tocify {
 ## Random-Effects Model (k = 10; tau^2 estimator: REML)
 ## 
 ##   logLik  deviance       AIC       BIC      AICc  
-##   1.3997   -2.7995    1.2005    1.5950    3.2005  
+##  -7.0429   14.0858   18.0858   18.4802   20.0858  
 ## 
-## tau^2 (estimated amount of total heterogeneity): 0.0000 (SE = 0.0035)
-## tau (square root of estimated tau^2 value):      0.0011
-## I^2 (total heterogeneity / total variability):   0.01%
-## H^2 (total variability / sampling variability):  1.00
+## tau^2 (estimated amount of total heterogeneity): 0.2135 (SE = 0.1162)
+## tau (square root of estimated tau^2 value):      0.4620
+## I^2 (total heterogeneity / total variability):   94.85%
+## H^2 (total variability / sampling variability):  19.41
 ## 
 ## Test for Heterogeneity: 
-## Q(df = 9) = 15.9865, p-val = 0.0672
+## Q(df = 9) = 49.1615, p-val &lt; .0001
 ## 
 ## Model Results:
 ## 
 ## estimate      se    zval    pval    ci.lb   ci.ub   
-##   0.0370  0.0303  1.2190  0.2228  -0.0225  0.0964   
+##   0.2951  0.1574  1.8745  0.0609  -0.0134  0.6036  .
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -417,23 +417,23 @@ div.tocify {
 <pre><code>## 
 ## Mixed-Effects Model (k = 10; tau^2 estimator: REML)
 ## 
-## tau^2 (estimated amount of residual heterogeneity):     0.0000 (SE = 0.0039)
-## tau (square root of estimated tau^2 value):             0.0012
-## I^2 (residual heterogeneity / unaccounted variability): 0.01%
-## H^2 (unaccounted variability / sampling variability):   1.00
-## R^2 (amount of heterogeneity accounted for):            0.00%
+## tau^2 (estimated amount of residual heterogeneity):     0.2000 (SE = 0.1165)
+## tau (square root of estimated tau^2 value):             0.4473
+## I^2 (residual heterogeneity / unaccounted variability): 94.14%
+## H^2 (unaccounted variability / sampling variability):   17.07
+## R^2 (amount of heterogeneity accounted for):            6.30%
 ## 
 ## Test for Residual Heterogeneity: 
-## QE(df = 8) = 14.7188, p-val = 0.0649
+## QE(df = 8) = 43.0059, p-val &lt; .0001
 ## 
 ## Test of Moderators (coefficient(s) 2): 
-## QM(df = 1) = 1.2674, p-val = 0.2603
+## QM(df = 1) = 1.5294, p-val = 0.2162
 ## 
 ## Model Results:
 ## 
 ##               estimate      se     zval    pval    ci.lb   ci.ub   
-## intrcpt         0.1049  0.0676   1.5531  0.1204  -0.0275  0.2374   
-## VaccinePolio   -0.0851  0.0756  -1.1258  0.2603  -0.2333  0.0631   
+## intrcpt         0.5355  0.2489   2.1512  0.0315   0.0476  1.0234  *
+## VaccinePolio   -0.3903  0.3156  -1.2367  0.2162  -1.0088  0.2283   
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -446,20 +446,20 @@ div.tocify {
 ## Random-Effects Model (k = 4; tau^2 estimator: REML)
 ## 
 ##   logLik  deviance       AIC       BIC      AICc  
-##   1.0718   -2.1436    1.8564    0.0536   13.8564  
+##  -3.2659    6.5317   10.5317    8.7290   22.5317  
 ## 
-## tau^2 (estimated amount of total heterogeneity): 0 (SE = 0.0162)
-## tau (square root of estimated tau^2 value):      0
-## I^2 (total heterogeneity / total variability):   0.00%
-## H^2 (total variability / sampling variability):  1.00
+## tau^2 (estimated amount of total heterogeneity): 0.4532 (SE = 0.4108)
+## tau (square root of estimated tau^2 value):      0.6732
+## I^2 (total heterogeneity / total variability):   92.59%
+## H^2 (total variability / sampling variability):  13.49
 ## 
 ## Test for Heterogeneity: 
-## Q(df = 3) = 2.9082, p-val = 0.4060
+## Q(df = 3) = 31.1954, p-val &lt; .0001
 ## 
 ## Model Results:
 ## 
 ## estimate      se    zval    pval    ci.lb   ci.ub   
-##   0.1049  0.0676  1.5532  0.1204  -0.0275  0.2373   
+##   0.5592  0.3547  1.5768  0.1148  -0.1359  1.2544   
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
