--- a/Breastfeeding_withheld.html
+++ b/Breastfeeding_withheld.html
@@ -443,7 +443,27 @@ div.tocify {
 <h3>Intervention-specific outputs</h3>
 <div id="summary-of-cholera-studies" class="section level4">
 <h4>Summary of cholera studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## 
+## Random-Effects Model (k = 2; tau^2 estimator: REML)
+## 
+##   logLik  deviance       AIC       BIC      AICc  
+##  -0.1356    0.2711    4.2711    0.2711   16.2711  
+## 
+## tau^2 (estimated amount of total heterogeneity): 0.0433 (SE = 0.1086)
+## tau (square root of estimated tau^2 value):      0.2080
+## I^2 (total heterogeneity / total variability):   56.34%
+## H^2 (total variability / sampling variability):  2.29
+## 
+## Test for Heterogeneity: 
+## Q(df = 1) = 2.2903, p-val = 0.1302
+## 
+## Model Results:
+## 
+## estimate      se    zval    pval    ci.lb   ci.ub   
+##   0.1632  0.1950  0.8370  0.4026  -0.2190  0.5454   
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
 <div id="summary-of-rotavirus-studies" class="section level4">
 <h4>Summary of rotavirus studies</h4>
@@ -471,7 +491,7 @@ div.tocify {
 </div>
 <div id="summary-of-pv3-studies" class="section level4">
 <h4>Summary of PV3 studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 </div>
 </div>
@@ -553,15 +573,15 @@ div.tocify {
 <h3>Serotype-specific outputs</h3>
 <div id="summary-of-pv1-studies" class="section level4">
 <h4>Summary of PV1 studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 <div id="summary-of-pv2-studies" class="section level4">
 <h4>Summary of PV2 studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 <div id="summary-of-pv3-studies-1" class="section level4">
 <h4>Summary of PV3 studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 </div>
 </div>
