--- a/Narrow_dose_interval.html
+++ b/Narrow_dose_interval.html
@@ -442,15 +442,35 @@ div.tocify {
 <h3>Intervention-specific outputs</h3>
 <div id="summary-of-cholera-studies" class="section level4">
 <h4>Summary of cholera studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 <div id="summary-of-rotavirus-studies" class="section level4">
 <h4>Summary of rotavirus studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 <div id="summary-of-pv3-studies" class="section level4">
 <h4>Summary of PV3 studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## 
+## Random-Effects Model (k = 2; tau^2 estimator: REML)
+## 
+##   logLik  deviance       AIC       BIC      AICc  
+##   2.1885   -4.3771   -0.3771   -4.3771   11.6229  
+## 
+## tau^2 (estimated amount of total heterogeneity): 0 (SE = 0.0025)
+## tau (square root of estimated tau^2 value):      0
+## I^2 (total heterogeneity / total variability):   0.00%
+## H^2 (total variability / sampling variability):  1.00
+## 
+## Test for Heterogeneity: 
+## Q(df = 1) = 0.1281, p-val = 0.7204
+## 
+## Model Results:
+## 
+## estimate      se     zval    pval    ci.lb   ci.ub   
+##  -0.0200  0.0221  -0.9074  0.3642  -0.0633  0.0232   
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
 </div>
 </div>
@@ -562,11 +582,31 @@ div.tocify {
 </div>
 <div id="summary-of-pv2-studies" class="section level4">
 <h4>Summary of PV2 studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 <div id="summary-of-pv3-studies-1" class="section level4">
 <h4>Summary of PV3 studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## 
+## Random-Effects Model (k = 2; tau^2 estimator: REML)
+## 
+##   logLik  deviance       AIC       BIC      AICc  
+##   2.1885   -4.3771   -0.3771   -4.3771   11.6229  
+## 
+## tau^2 (estimated amount of total heterogeneity): 0 (SE = 0.0025)
+## tau (square root of estimated tau^2 value):      0
+## I^2 (total heterogeneity / total variability):   0.00%
+## H^2 (total variability / sampling variability):  1.00
+## 
+## Test for Heterogeneity: 
+## Q(df = 1) = 0.1281, p-val = 0.7204
+## 
+## Model Results:
+## 
+## estimate      se     zval    pval    ci.lb   ci.ub   
+##  -0.0200  0.0221  -0.9074  0.3642  -0.0633  0.0232   
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
 </div>
 </div>
