--- a/Probiotic.html
+++ b/Probiotic.html
@@ -442,15 +442,35 @@ div.tocify {
 <h3>Intervention-specific outputs</h3>
 <div id="summary-of-cholera-studies" class="section level4">
 <h4>Summary of cholera studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 <div id="summary-of-rotavirus-studies" class="section level4">
 <h4>Summary of rotavirus studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## 
+## Random-Effects Model (k = 2; tau^2 estimator: REML)
+## 
+##   logLik  deviance       AIC       BIC      AICc  
+##   0.7982   -1.5964    2.4036   -1.5964   14.4036  
+## 
+## tau^2 (estimated amount of total heterogeneity): 0 (SE = 0.0366)
+## tau (square root of estimated tau^2 value):      0
+## I^2 (total heterogeneity / total variability):   0.00%
+## H^2 (total variability / sampling variability):  1.00
+## 
+## Test for Heterogeneity: 
+## Q(df = 1) = 0.2195, p-val = 0.6394
+## 
+## Model Results:
+## 
+## estimate      se    zval    pval    ci.lb   ci.ub   
+##   0.1937  0.1046  1.8511  0.0642  -0.0114  0.3987  .
+## 
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
 <div id="summary-of-pv3-studies" class="section level4">
 <h4>Summary of PV3 studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 </div>
 </div>
@@ -532,15 +552,15 @@ div.tocify {
 <h3>Serotype-specific outputs</h3>
 <div id="summary-of-pv1-studies" class="section level4">
 <h4>Summary of PV1 studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 <div id="summary-of-pv2-studies" class="section level4">
 <h4>Summary of PV2 studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 <div id="summary-of-pv3-studies-1" class="section level4">
 <h4>Summary of PV3 studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 </div>
 </div>
