--- a/README.html
+++ b/README.html
@@ -11,9 +11,9 @@
 
 
 
-<title>Church_et_al_2018_footnotes_summary.utf8</title>
+<title>README.utf8</title>
 
-<script src="site_libs/jquery-1.12.4/jquery.min.js"></script>
+<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -22,15 +22,6 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<script src="site_libs/htmlwidgets-1.2/htmlwidgets.js"></script>
-<link href="site_libs/datatables-css-0.0.0/datatables-crosstalk.css" rel="stylesheet" />
-<script src="site_libs/datatables-binding-0.4/datatables.js"></script>
-<link href="site_libs/dt-core-1.10.16/css/jquery.dataTables.min.css" rel="stylesheet" />
-<link href="site_libs/dt-core-1.10.16/css/jquery.dataTables.extra.css" rel="stylesheet" />
-<script src="site_libs/dt-core-1.10.16/js/jquery.dataTables.min.js"></script>
-<link href="site_libs/crosstalk-1.0.0/css/crosstalk.css" rel="stylesheet" />
-<script src="site_libs/crosstalk-1.0.0/js/crosstalk.min.js"></script>
-<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -249,7 +240,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="Footnotes.html">Footnotes</a>
+  <a href="footnotes.html">Footnotes</a>
 </li>
 <li>
   <a href="https://github.com/eparker12/oral_vaccine_interventions_metaanalysis_2018">
@@ -270,21 +261,40 @@ $(document).ready(function () {
 </div>
 
 
-<div id="footnotes" class="section level1 hidden">
-<h1>Footnotes</h1>
-<p>####Footnotes <div id="htmlwidget-7cb2c43939b831b24a57" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-7cb2c43939b831b24a57">{"x":{"filter":"none","data":[["1","2","3","4","5"],["Buffer","Buffer","Extra doses","OPV valency","Probiotic"],["Sack (1997) *","Ing (1991) **","Madhi (2010) *","Sutter (2010) *","De Vrese (2005) *"],["This study also examined another buffer, CeraVacx (sodium bicarbonate, trisodium citrate, rice syrup) with identical results. We excluded these data from the forest plot to avoid replication of the control group.","This study also examined the same buffer at a smaller volume (2ml). We excluded these data from the forest plot to avoid replication of the control group.","Immunogenicity data extracted from Madhi (2012) and Cunliffe (2012). Sample size for Malawi data not reported therefore estimated using confidence intervals around proportions.","This study also included an arm comparing bOPV with tOPV. We excluded these data from the forest plot to avoid replication of the control group.","This study also examined another probiotic, Lactobacillus casei CRL431 10^10 cfu, with similar results. We excluded these data from the forest plot to avoid replication of the control group."]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Intervention<\/th>\n      <th>Study<\/th>\n      <th>Notes<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"paging":false,"order":[],"autoWidth":false,"orderClasses":false,"columnDefs":[{"orderable":false,"targets":0}]}},"evals":[],"jsHooks":[]}</script></p>
-<div id="acronyms" class="section level4">
-<h4>Acronyms</h4>
-<div id="htmlwidget-b088355dacdb7d86e0f0" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-b088355dacdb7d86e0f0">{"x":{"filter":"none","data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25"],["1h","4w","50k","Bbb01","BF","(c)","(f)","IPV","IU","Lc ATCC","LGG","OCV","OPV","bOPV","mOPV","tOPV","RVV","RV1","RV5","Ty21a","U/r","Vit A","w/","w/h","w/o"],["One hour","Four weeks","50,000","Bifidobacterium breve 01","Breastfeeding","Centrifuged","Filtered","Inactivated poliovirus vaccine","International Units","Lactobacillus casei ATCC","Lactobacillus GG","Oral cholera vaccine","Oral poliovirus vaccine","Bivalent OPV","Monovalent OPV","Trivalent OPV","Rotavirus vaccine","Rotarix monovalent vaccine","RotaTeq pentavalent vaccine","Live attenuated strain of salmonella typhi","Unrestricted","Vitamin A","With","Withheld","Without"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Acronym<\/th>\n      <th>Notes<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"paging":false,"order":[],"autoWidth":false,"orderClasses":false,"columnDefs":[{"orderable":false,"targets":0}]}},"evals":[],"jsHooks":[]}</script>
+<div id="eparker12.github.io-oral_vaccine_interventions_metaanalysis_2018" class="section level1">
+<h1>eparker12.github.io-oral_vaccine_interventions_metaanalysis_2018</h1>
+<div id="church-et-al-2018-meta-analysis-of-interventions-to-improve-oral-vaccine-immunogenicity" class="section level2">
+<h2>Church et al (2018): meta-analysis of interventions to improve oral vaccine immunogenicity</h2>
+<p>This github page contains the statistical analysis code and input data for the meta-analysis of interventions to improve oral vaccine immunogenicity described by Church et al (2018).</p>
+<p>The full output of these analyses is available in the study’s <em><a href="https://eparker12.github.io/oral_vaccine_interventions_metaanalysis_2018">e-appendix</a></em>.</p>
+<p>The final analysis includes 12 interventions (e.g., Breastfeeding withheld, Buffer, etc.). For each intervention, we include the following:<br />
+- An Rmd file containing the R code for the intervention-specific analyses.<br />
+- A corresponding html file with the output of these analyses.<br />
+- A folder containing the figures included in this html (used when rendering the <em><a href="https://eparker12.github.io/oral_vaccine_interventions_metaanalysis_2018">e-appendix</a></em>).</p>
+<p>We also include the following:<br />
+- <em>site.yml</em> - used to generate the layout for the <em><a href="https://eparker12.github.io/oral_vaccine_interventions_metaanalysis_2018">e-appendix</a></em>;<br />
+- <em>index.Rmd</em> and <em>index.html</em> - used generate the Home tab of the <em><a href="https://eparker12.github.io/oral_vaccine_interventions_metaanalysis_2018">e-appendix</a></em>;<br />
+- <em>footnotes.Rmd</em> and <em>Footnotes.html</em> - used generate the Footnotes tab of the <em><a href="https://eparker12.github.io/oral_vaccine_interventions_metaanalysis_2018">e-appendix</a></em>;<br />
+- <em>summary.Rmd</em> and <em>summary.html</em> - used to generate the Summary tab of the <em><a href="https://eparker12.github.io/oral_vaccine_interventions_metaanalysis_2018">e-appendix</a></em>;<br />
+- <em>Church_et_al_2018_metaregression_acronyms.csv</em> - containing acronyms used in the plots;<br />
+- <em>Church_et_al_2018_metaregression_footnotes.csv</em> - containing plot footnotes.<br />
+- <em>Church_et_al_2018_summary.csv</em> - containing the data for the summary plot (comparing the estimated effects of different interventions).</p>
 </div>
+<div id="analysis-code" class="section level2">
+<h2>Analysis code</h2>
+<p>In spite of the numerous files and folders, all of the analyses are derived from a basic script titled <em>Church_et_al_metaregression.Rmd</em>. This contains the phrase ‘intervention_placeholder’ on lines 9 and 26. Each of the intervention-specific Rmd files are generated simply by updating these two lines with the intervention of interest (e.g. ‘Breastfeeding withheld’).</p>
+<p>This basic Rmd file requires the following:<br />
+- <em>Church_et_al_2018_metaregression_input.csv</em> – containing the input data;<br />
+- <em>Church_et_al_2018_plot_settings.csv</em> - containing the plotting parameters for each intervention (axis limits, plot height, plot width, and footnote coordinates).</p>
 </div>
-<div id="summary" class="section level1 hidden">
-<h1>Summary</h1>
-<div id="summary-of-intervention-effects-by-vaccine-type" class="section level4">
-<h4>Summary of intervention effects by vaccine type</h4>
-<p><img src="Church_et_al_2018_footnotes_summary_files/figure-html/unnamed-chunk-3-1.png" width="864" /></p>
+<div id="compiling-the-analysis-from-the-command-line" class="section level2">
+<h2>Compiling the analysis from the command line</h2>
+<p>Although the final analyses can be generated solely in R using the files provided, we used the script contained in <em>Church_et_al_2018_command_line_compiler.sh</em> to generate the intervention-specific analysis scripts from the basic <em>Church_et_al_metaregression.Rmd</em> script in unix. This script also renders the analyses into the <em><a href="https://eparker12.github.io/oral_vaccine_interventions_metaanalysis_2018">e-appendix</a></em>.</p>
+</div>
+<div id="other-resources" class="section level2">
+<h2>Other resources</h2>
+<p>The systematic review protocol has been published on <a href="https://www.crd.york.ac.uk/PROSPERO/DisplayPDF.php?ID=CRD42017060608">PROSPERO</a>.</p>
+<p>The extracted data has been published on the <a href="https://osf.io/bemw6/">Open Science Framework</a>.</p>
 </div>
 </div>
 
