--- a/Extra_dose_s_.html
+++ b/Extra_dose_s_.html
@@ -379,14 +379,20 @@ div.tocify {
 </div>
 <div id="eggers-test" class="section level3">
 <h3>Egger’s test</h3>
-<pre><code>## [1] &quot;No replication of infants across vaccines or significant vaccine effect, therefore combined test performed&quot;</code></pre>
-<pre><code>## 
+<pre><code>## [1] &quot;Infants replicated across vaccines or vaccine effect significant, therefore separate tests performed&quot;
+## [1] &quot;Cholera:&quot;
+## [1] &quot;Insufficient studies (n&lt;3)&quot;
+## [1] &quot;Rotavirus:&quot;
+## 
 ## Regression Test for Funnel Plot Asymmetry
 ## 
 ## model:     mixed-effects meta-regression model
 ## predictor: standard error
 ## 
-## test for funnel plot asymmetry: z = -1.7301, p = 0.0836</code></pre>
+## test for funnel plot asymmetry: z = -1.7034, p = 0.0885
+## 
+## [1] &quot;OPV3:&quot;
+## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
 </div>
 <div id="meta-analysis-output" class="section level3">
 <h3>Meta-analysis output</h3>
@@ -394,20 +400,20 @@ div.tocify {
 ## Random-Effects Model (k = 9; tau^2 estimator: REML)
 ## 
 ##   logLik  deviance       AIC       BIC      AICc  
-##  -3.0189    6.0377   10.0377   10.1966   12.4377  
+##  -0.6935    1.3870    5.3870    5.5459    7.7870  
 ## 
-## tau^2 (estimated amount of total heterogeneity): 0.0567 (SE = 0.0466)
-## tau (square root of estimated tau^2 value):      0.2381
-## I^2 (total heterogeneity / total variability):   64.24%
-## H^2 (total variability / sampling variability):  2.80
+## tau^2 (estimated amount of total heterogeneity): 0.0200 (SE = 0.0246)
+## tau (square root of estimated tau^2 value):      0.1415
+## I^2 (total heterogeneity / total variability):   41.19%
+## H^2 (total variability / sampling variability):  1.70
 ## 
 ## Test for Heterogeneity: 
-## Q(df = 8) = 21.5031, p-val = 0.0059
+## Q(df = 8) = 15.0759, p-val = 0.0577
 ## 
 ## Model Results:
 ## 
 ## estimate      se    zval    pval    ci.lb   ci.ub   
-##   0.1953  0.1030  1.8955  0.0580  -0.0066  0.3973  .
+##   0.1125  0.0759  1.4809  0.1386  -0.0364  0.2613   
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -417,24 +423,24 @@ div.tocify {
 <pre><code>## 
 ## Mixed-Effects Model (k = 9; tau^2 estimator: REML)
 ## 
-## tau^2 (estimated amount of residual heterogeneity):     0.0838 (SE = 0.0724)
-## tau (square root of estimated tau^2 value):             0.2894
-## I^2 (residual heterogeneity / unaccounted variability): 70.78%
-## H^2 (unaccounted variability / sampling variability):   3.42
-## R^2 (amount of heterogeneity accounted for):            0.00%
+## tau^2 (estimated amount of residual heterogeneity):     0.0000 (SE = 0.0152)
+## tau (square root of estimated tau^2 value):             0.0011
+## I^2 (residual heterogeneity / unaccounted variability): 0.00%
+## H^2 (unaccounted variability / sampling variability):   1.00
+## R^2 (amount of heterogeneity accounted for):            99.99%
 ## 
 ## Test for Residual Heterogeneity: 
-## QE(df = 6) = 17.6433, p-val = 0.0072
+## QE(df = 6) = 6.5822, p-val = 0.3612
 ## 
 ## Test of Moderators (coefficient(s) 2:3): 
-## QM(df = 2) = 0.9252, p-val = 0.6296
+## QM(df = 2) = 8.4932, p-val = 0.0143
 ## 
 ## Model Results:
 ## 
 ##                   estimate      se     zval    pval    ci.lb   ci.ub   
-## intrcpt             0.3023  0.3689   0.8194  0.4125  -0.4207  1.0253   
-## VaccinePolio        0.1320  0.4851   0.2722  0.7854  -0.8187  1.0827   
-## VaccineRotavirus   -0.1772  0.3928  -0.4513  0.6518  -0.9471  0.5926   
+## intrcpt             0.3023  0.2287   1.3217  0.1863  -0.1460  0.7505   
+## VaccinePolio        0.1320  0.2603   0.5073  0.6119  -0.3781  0.6422   
+## VaccineRotavirus   -0.2613  0.2375  -1.1002  0.2712  -0.7268  0.2042   
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -443,7 +449,7 @@ div.tocify {
 <h3>Intervention-specific outputs</h3>
 <div id="summary-of-cholera-studies" class="section level4">
 <h4>Summary of cholera studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 <div id="summary-of-rotavirus-studies" class="section level4">
 <h4>Summary of rotavirus studies</h4>
@@ -451,27 +457,27 @@ div.tocify {
 ## Random-Effects Model (k = 7; tau^2 estimator: REML)
 ## 
 ##   logLik  deviance       AIC       BIC      AICc  
-##  -2.9440    5.8879    9.8879    9.4714   13.8879  
+##   1.0133   -2.0266    1.9734    1.5569    5.9734  
 ## 
-## tau^2 (estimated amount of total heterogeneity): 0.0838 (SE = 0.0724)
-## tau (square root of estimated tau^2 value):      0.2894
-## I^2 (total heterogeneity / total variability):   70.78%
-## H^2 (total variability / sampling variability):  3.42
+## tau^2 (estimated amount of total heterogeneity): 0.0000 (SE = 0.0152)
+## tau (square root of estimated tau^2 value):      0.0011
+## I^2 (total heterogeneity / total variability):   0.00%
+## H^2 (total variability / sampling variability):  1.00
 ## 
 ## Test for Heterogeneity: 
-## Q(df = 6) = 17.6433, p-val = 0.0072
+## Q(df = 6) = 6.5822, p-val = 0.3612
 ## 
 ## Model Results:
 ## 
 ## estimate      se    zval    pval    ci.lb   ci.ub   
-##   0.1250  0.1349  0.9270  0.3539  -0.1393  0.3894   
+##   0.0410  0.0641  0.6397  0.5224  -0.0846  0.1665   
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
 </div>
 <div id="summary-of-pv3-studies" class="section level4">
 <h4>Summary of PV3 studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 </div>
 </div>
@@ -553,15 +559,15 @@ div.tocify {
 <h3>Serotype-specific outputs</h3>
 <div id="summary-of-pv1-studies" class="section level4">
 <h4>Summary of PV1 studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 <div id="summary-of-pv2-studies" class="section level4">
 <h4>Summary of PV2 studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 <div id="summary-of-pv3-studies-1" class="section level4">
 <h4>Summary of PV3 studies</h4>
-<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;2)&quot;</code></pre>
 </div>
 </div>
 </div>
