--- a/Increased_vaccine_inoculum.html
+++ b/Increased_vaccine_inoculum.html
@@ -298,6 +298,9 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
+      <a href="Antihelminthic.html">Antihelminthic</a>
+    </li>
+    <li>
       <a href="Breastfeeding_withheld.html">Breastfeeding withheld</a>
     </li>
     <li>
@@ -386,7 +389,7 @@ div.tocify {
 ## model:     mixed-effects meta-regression model
 ## predictor: standard error
 ## 
-## test for funnel plot asymmetry: z = 3.4579, p = 0.0005</code></pre>
+## test for funnel plot asymmetry: z = 2.9359, p = 0.0033</code></pre>
 </div>
 <div id="meta-analysis-output" class="section level3">
 <h3>Meta-analysis output</h3>
@@ -394,20 +397,20 @@ div.tocify {
 ## Random-Effects Model (k = 11; tau^2 estimator: REML)
 ## 
 ##   logLik  deviance       AIC       BIC      AICc  
-##  -7.2268   14.4536   18.4536   19.0588   20.1679  
+##   2.2089   -4.4178   -0.4178    0.1874    1.2965  
 ## 
-## tau^2 (estimated amount of total heterogeneity): 0.1801 (SE = 0.0941)
-## tau (square root of estimated tau^2 value):      0.4244
-## I^2 (total heterogeneity / total variability):   93.99%
-## H^2 (total variability / sampling variability):  16.64
+## tau^2 (estimated amount of total heterogeneity): 0.0000 (SE = 0.0034)
+## tau (square root of estimated tau^2 value):      0.0021
+## I^2 (total heterogeneity / total variability):   0.04%
+## H^2 (total variability / sampling variability):  1.00
 ## 
 ## Test for Heterogeneity: 
-## Q(df = 10) = 49.8233, p-val &lt; .0001
+## Q(df = 10) = 16.9197, p-val = 0.0762
 ## 
 ## Model Results:
 ## 
-## estimate      se    zval    pval   ci.lb   ci.ub   
-##   0.2748  0.1387  1.9803  0.0477  0.0028  0.5467  *
+## estimate      se    zval    pval    ci.lb   ci.ub   
+##   0.0446  0.0293  1.5222  0.1280  -0.0128  0.1020   
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -417,23 +420,23 @@ div.tocify {
 <pre><code>## 
 ## Mixed-Effects Model (k = 11; tau^2 estimator: REML)
 ## 
-## tau^2 (estimated amount of residual heterogeneity):     0.1789 (SE = 0.0988)
-## tau (square root of estimated tau^2 value):             0.4229
-## I^2 (residual heterogeneity / unaccounted variability): 93.53%
-## H^2 (unaccounted variability / sampling variability):   15.45
-## R^2 (amount of heterogeneity accounted for):            0.68%
+## tau^2 (estimated amount of residual heterogeneity):     0.0000 (SE = 0.0038)
+## tau (square root of estimated tau^2 value):             0.0010
+## I^2 (residual heterogeneity / unaccounted variability): 0.01%
+## H^2 (unaccounted variability / sampling variability):   1.00
+## R^2 (amount of heterogeneity accounted for):            78.23%
 ## 
 ## Test for Residual Heterogeneity: 
-## QE(df = 9) = 43.2998, p-val &lt; .0001
+## QE(df = 9) = 14.8352, p-val = 0.0956
 ## 
 ## Test of Moderators (coefficient(s) 2): 
-## QM(df = 1) = 1.1715, p-val = 0.2791
+## QM(df = 1) = 2.0840, p-val = 0.1488
 ## 
 ## Model Results:
 ## 
 ##               estimate      se     zval    pval    ci.lb   ci.ub   
-## intrcpt         0.4441  0.2090   2.1247  0.0336   0.0344  0.8537  *
-## VaccinePolio   -0.3018  0.2788  -1.0824  0.2791  -0.8482  0.2447   
+## intrcpt         0.1168  0.0580   2.0146  0.0439   0.0032  0.2304  *
+## VaccinePolio   -0.0970  0.0672  -1.4436  0.1488  -0.2286  0.0347   
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
@@ -446,20 +449,20 @@ div.tocify {
 ## Random-Effects Model (k = 5; tau^2 estimator: REML)
 ## 
 ##   logLik  deviance       AIC       BIC      AICc  
-##  -3.9042    7.8084   11.8084   10.5810   23.8084  
+##   2.2349   -4.4697   -0.4697   -1.6971   11.5303  
 ## 
-## tau^2 (estimated amount of total heterogeneity): 0.3477 (SE = 0.2749)
-## tau (square root of estimated tau^2 value):      0.5897
-## I^2 (total heterogeneity / total variability):   93.55%
-## H^2 (total variability / sampling variability):  15.50
+## tau^2 (estimated amount of total heterogeneity): 0 (SE = 0.0114)
+## tau (square root of estimated tau^2 value):      0
+## I^2 (total heterogeneity / total variability):   0.00%
+## H^2 (total variability / sampling variability):  1.00
 ## 
 ## Test for Heterogeneity: 
-## Q(df = 4) = 31.4893, p-val &lt; .0001
+## Q(df = 4) = 3.0247, p-val = 0.5537
 ## 
 ## Model Results:
 ## 
-## estimate      se    zval    pval    ci.lb   ci.ub   
-##   0.4661  0.2790  1.6706  0.0948  -0.0807  1.0129  .
+## estimate      se    zval    pval   ci.lb   ci.ub   
+##   0.1168  0.0580  2.0147  0.0439  0.0032  0.2304  *
 ## 
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
