--- a/README.html
+++ b/README.html
@@ -193,6 +193,9 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
+      <a href="Antihelminthic.html">Antihelminthic</a>
+    </li>
+    <li>
       <a href="Breastfeeding_withheld.html">Breastfeeding withheld</a>
     </li>
     <li>
