--- a/Delayed_first_dose.html
+++ b/Delayed_first_dose.html
@@ -298,6 +298,9 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
+      <a href="Antihelminthic.html">Antihelminthic</a>
+    </li>
+    <li>
       <a href="Breastfeeding_withheld.html">Breastfeeding withheld</a>
     </li>
     <li>
