--- a/Antihelminthic.html
+++ b/Antihelminthic.html
@@ -382,6 +382,7 @@ div.tocify {
 </div>
 <div id="eggers-test" class="section level3">
 <h3>Egger’s test</h3>
+<pre><code>## [1] &quot;Insufficient studies (n&lt;3)&quot;</code></pre>
 </div>
 <div id="meta-analysis-output" class="section level3">
 <h3>Meta-analysis output</h3>
