--- a/summary.html
+++ b/summary.html
@@ -266,6 +266,7 @@ $(document).ready(function () {
 </div>
 
 
+<pre><code>## Warning: Removed 9 rows containing missing values (geom_point).</code></pre>
 <p><img src="summary_files/figure-html/unnamed-chunk-1-1.png" width="864" /></p>
 
 
